--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
+    <ul>
+        <li><a href="./recipes/ramen.html">Ramen</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/subway.html">Subway</a></li>
+        <li><a href="./recipes/croissant.html">Croissant</a></li>
+        <li><a href="./recipes/tacos.html">Tacos</a></li>
+    </ul>
 </body>
 </html>
